# ai-invention-582cc7-circuit-motif-spectroscopy-discovering-u

./: README.md
dataset_iter1_neuronpedia_att/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_neuronpedia_att/src/: collect_graphs.py  collect_v2.py  collect_v3.py  data.py  preview_data_out.json  pyproject.toml
dataset_iter2_neuronpedia_fea/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter2_neuronpedia_fea/src/: data.py  pipeline.py  preview_data_out.json  pyproject.toml  test_steps1to3.py
dataset_iter2_neuronpedia_fea/src/data_out/: mini_data_out.json
dataset_iter2_scale_neuronped/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter2_scale_neuronped/src/: collect_v4.py  data.py  data_v2.py  preview_data_out.json  pyproject.toml  run_batches.sh
dataset_iter3_scale_neuronped/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter3_scale_neuronped/src/: collect_v5.py  data.py  pyproject.toml
dataset_iter3_scale_neuronped/src/data_out/: preview_data_out.json
evaluation_iter3_statistical_sig/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_statistical_sig/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter4_hypothesis_evid/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter4_hypothesis_evid/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_definitive_evid/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter5_definitive_evid/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_master_evidence/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_master_evidence/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_paper_section_d/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_paper_section_d/src/: eval.py  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_publication_fig/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_publication_fig/src/: eval.py  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_cross_verificat/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_cross_verificat/src/: eval.py  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_latex_paper_ass/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_latex_paper_ass/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_supplementary_m/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_supplementary_m/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml  supplementary.aux  supplementary.out  supplementary.tex  supplementary.toc
experiment_iter2_3_node_4_node_m/demo/: demo_result.json  method_code_demo.ipynb
experiment_iter2_3_node_4_node_m/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_layer_architect/demo/: demo_result.json  method_code_demo.ipynb
experiment_iter2_layer_architect/src/: full_method_out.json  method.py  preview_method_out.json
experiment_iter3_4_node_motif_ce/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_4_node_motif_ce/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_ffl_functional/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_ffl_functional/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_motif_based_fai/demo/: demo_result.json  (+2 more)
experiment_iter4_weighted_motif/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter5_paper_ready_vis/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
paper_latex/: paper.tex
(+95 files in other folders)
