[project]
name = "neuronpedia-feature-explanations"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
description = "Build Neuronpedia feature explanation lookup table from attribution graph nodes"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "frozenlist==1.8.0",
    "idna==3.11",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "propcache==0.4.1",
    "requests==2.32.5",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "yarl==1.23.0",
]
