[project]
name = "neuronpedia-attribution-graphs-v3"
version = "3.0.0"
requires-python = ">=3.10"
description = "Neuronpedia attribution graph corpus — 200 unique DAGs across 8 domains for gemma-2-2b, merged from iter2 (140) and iter3 (60) collections."
dependencies = [
    "requests==2.32.5",
    "networkx==3.6.1",
    "loguru==0.7.3",
]
