[project]
name = "eval-id5-it4-hypothesis-scorecard"
version = "0.1.0"
description = "Hypothesis Evidence Scorecard: Synthesizing Iterations 1-3 Experimental Results"
requires-python = ">=3.10,<3.12"
dependencies = [
    "loguru==0.7.3",
    "psutil==7.2.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
