[project]
name = "eval-id4-it5-opus"
version = "1.0.0"
requires-python = ">=3.10,<3.12"
description = "Definitive Evidence Synthesis: Iterations 1-4 Hypothesis Scorecard & Paper Architecture"
dependencies = [
    "loguru==0.7.3",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.7",
]
